# dailylogger

./: .gitignore  .gitmodules  .gradlew.bat.swp  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni.c
app/src/main/java/com/ishilab/transcriber/: AiTabUi.kt  CalendarTabUi.kt  ChatUi.kt  MainActivity.kt  RecordingTabUi.kt  RecordsTabUi.kt  SettingsUi.kt
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml  network_security_config.xml
client/: .gitignore  Makefile  README.md  audio-worker.js  package-lock.json  package.json  stt-local.js
client/cpp/src/: api.hpp  config.hpp  main.cpp  metrics.hpp  stt.hpp  ui.hpp  ui_html.hpp  util.hpp  worker.hpp
docs/: 01-architecture.md  02-server-code-map.md  03-client-code-map.md  04-worker-protocol.md  05-api-reference.md  08-dashboard.md  README.md
gradle/: libs.versions.toml
ios/Transcriber/: Info.plist
ios/Transcriber/Net/: BackgroundSync.swift  ReminderNotifier.swift  WeatherClient.swift
ios/Transcriber/Service/: DailyDigest.swift  NotificationPrefs.swift  TravelAssistant.swift  TravelPrefs.swift
ios/Transcriber/UI/: AiSettingsView.swift  AiTabView.swift  CalendarTabView.swift
server/: .env.example  .gitignore  Makefile  README.md  accounts.json  audio.js  auth.js  cred.js  dashboard.js  db.js  gemini.js  google.js  moodle.js  package-lock.json  package.json  reminders.js  rotate-cred-key.js  schema.sql  server.js
server/cpp/src/: main.cpp
server/scraper/: waseda_scraper.py
server/stt/: transcribe.py
server/test/: http-gateway.test.js  managed-backend.js  process-supervision.test.js
(+21 files in other folders)
